DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2010-12-09 patrick     Changed the multi-click time to be an unsigned long
                       measured in milliseconds.
                       NEW VERSION: 2.1.11
2010-11-03 furlong.t   Added a barrier cluster plugin for general application
                       use.
                       NEW VERSION: 2.1.10
2010-10-17 aronb       Add a cluster plug-in that allows users to register
                       callbacks for asynchronous events.
                       NEW VERSION: 2.1.9
2010-08-07 patrick     Changed gadget::KeyboardMouseEventInterface to be a
                       class template to follow the model of all the other
                       event interface types. Its default collection tag is
                       still gadget::event::all_events_tag, and its default
                       generation tag is still gadget::event::immediate_tag.
                       NEW VERSION: 2.1.8
2010-08-07 patrick     Added gadget::AnalogEventInterface<C,G>,
                       gadget::CommandEventInterface<C,G> and
                       gadget::StringEventInterface<C,G>.
                       NEW VERSION: 2.1.7
2010-08-01 patrick     Added gadget::DigitalEventInterface<C,G>,
                       gadget::MouseMultiClickEventInterface<C,G> and
                       gadget::DigitalMultiClickEventInterface<C,G>.
                       NEW VERSION: 2.1.6
2010-07-31 patrick     Changed gadget::Digital to use
                       gadget::DeviceData<gadget::DigitalState::State>
                       instead of gadget::DeviceData<int>.
                       NEW VERSION: 2.1.5
2010-07-24 patrick     Added gadget::PositionEventInterface<C,G>.
                       NEW VERSION: 2.1.4
2010-07-24 patrick     Implemented synchronized eevnt delivery.
                       NEW VERSION: 2.1.3