@@ -1,5 +1,9 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2011-01-17 patrick     gadget::BasicEventGenerator instances now create an
+                       instance of their sample handler so that the sample
+                       handler's can track state.
+                       NEW VERSION: 2.1.12
 2010-12-09 patrick     Changed the multi-click time to be an unsigned long
                        measured in milliseconds.
                        NEW VERSION: 2.1.11
